--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div>
           <button
             type="submit"
-            class="w-full py-2 px-4 bg-accent text-white font-medium rounded hover:bg-accent-hover"
+            class="w-full py-2 px-4 bg-accent text-white text-base font-medium rounded hover:bg-accent-hover"
           >
             Login
           </button>
