FEAT: added collection and create page
Create:
Added dropdown
added Js for each list in dropdown

Profile:

added a fake comic list in profile

--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Collections | Authentication</title>
+    <title>Collective Hub | Login</title>
     <script type="module" src="public/js/main.js" defer></script>
   <body class="flex justify-center items-center h-screen bg-gray-100">
     <section class="w-full max-w-md p-6 bg-white rounded-lg shadow-md">
-      <h1 class="text-center text-2xl font-semibold mb-6 text-primary">Authentication</h1>
-      <form action="public/feed.html" method="POST" class="space-y-4" >
+      <span class="flex justify-center">
+        <svg width="40" height="40" viewBox="0 0 50 50" xmlns="http://www.w3.org/2000/svg" fill="none">
+          <circle cx="15" cy="25" r="10" fill="#197278" />
+          <circle cx="35" cy="25" r="10" fill="#283D3B" />
+          <circle cx="25" cy="15" r="10" fill="#C44536" />
+          <circle cx="25" cy="35" r="10" fill="#EDDDD4" />
+      </svg>
+      <h1 class="text-center text-2xl font-semibold mb-6 text-primary">Collective hub</h1>
+      </span>
+      <h2 class="text-center text-xl font-semibold mb-6 text-primary">Login</h2>
+      <form action="public/main.html" method="POST" class="space-y-4" >
         <div>
           <label for="email" class="block text-sm font-medium text-primary">Email</label>
           <input
