--- a/public/profile.html
+++ b/public/profile.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Feed</title>
+    <title>Profile</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script type="module" src="../public/js/main.js" defer></script>
 </head>
 <body class="flex">
+
     <!-- Sidebar navigation -->
-    <nav class="bg-gray-800 w-[50px] md:w-64 min-h-screen">
+    <nav class="bg-gray-800 w-[50px] md:w-64 min-h-screen fixed">
         <div class="mx-auto max-w-full px-1 py-4">
             <div class="flex flex-col items-start space-y-6">
                 <!-- Logo -->
@@ -19,13 +21,15 @@
                         <circle cx="25" cy="15" r="10" fill="#C44536" />
                         <circle cx="25" cy="35" r="10" fill="#EDDDD4" />
                     </svg>
-                    <span class="text-white ml-4 text-lg font-semibold hidden md:block">Collective hub</span>
+                    <span class="text-white ml-4 text-lg font-semibold hidden md:block">Collective Hub</span>
                 </div>
 
-                <!--links -->
+                <!-- Links -->
                 <div class="flex flex-col space-y-2 md:w-full mt-8">
-                    <a href="feed.html" class="rounded-md bg-gray-900 px-2 py-2 text-sm font-medium text-white flex items-center gap-5">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#edddd4" viewBox="0 0 256 256"><path d="M216,40H40A16,16,0,0,0,24,56V200a16,16,0,0,0,16,16H216a16,16,0,0,0,16-16V56A16,16,0,0,0,216,40Zm0,160H40V56H216V200ZM184,96a8,8,0,0,1-8,8H80a8,8,0,0,1,0-16h96A8,8,0,0,1,184,96Zm0,32a8,8,0,0,1-8,8H80a8,8,0,0,1,0-16h96A8,8,0,0,1,184,128Zm0,32a8,8,0,0,1-8,8H80a8,8,0,0,1,0-16h96A8,8,0,0,1,184,160Z"></path></svg>
+                    <a href="feed.html" class="rounded-md px-2 py-2 text-sm font-medium text-white flex items-center gap-5">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#edddd4" viewBox="0 0 256 256">
+                            <path d="M216,40H40A16,16,0,0,0,24,56V200a16,16,0,0,0,16,16H216a16,16,0,0,0,16-16V56A16,16,0,0,0,216,40ZM184,96a8,8,0,0,1-8,8H80a8,8,0,0,1,0-16h96A8,8,0,0,1,184,96Zm0,32a8,8,0,0,1-8,8H80a8,8,0,0,1,0-16h96A8,8,0,0,1,184,128Zm0,32a8,8,0,0,1-8,8H80a8,8,0,0,1,0-16h96A8,8,0,0,1,184,160Z"></path>
+                        </svg>
                         <p class="hidden md:block">Feed</p>
                     </a>
                     <a href="create.html" class="rounded-md px-2 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white flex items-center gap-5">
@@ -34,22 +38,36 @@
                         </svg>
                         <p class="hidden md:block">Create</p>
                     </a>
-                    <a href="profile.html" class="rounded-md px-2 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white sm:w-10 md:w-full text-left flex items-center gap-5">
+                    <a href="profile.html" class="rounded-md bg-gray-900 px-2 py-2 text-sm font-medium text-white flex items-center gap-5" aria-current="page">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#edddd4ff" viewBox="0 0 256 256">
                             <path d="M168,128a8,8,0,0,1-8,8H96a8,8,0,0,1,0-16h64A8,8,0,0,1,168,128Zm-8,24H96a8,8,0,0,0,0,16h64a8,8,0,0,0,0-16ZM216,40V200a32,32,0,0,1-32,32H72a32,32,0,0,1-32-32V40a8,8,0,0,1,8-8H72V24a8,8,0,0,1,16,0v8h32V24a8,8,0,0,1,16,0v8h32V24a8,8,0,0,1,16,0v8h24A8,8,0,0,1,216,40Zm-16,8H184v8a8,8,0,0,1-16,0V48H136v8a8,8,0,0,1-16,0V48H88v8a8,8,0,0,1-16,0V48H56V200a16,16,0,0,0,16,16H184a16,16,0,0,0,16-16Z"></path>
                         </svg>
-                        <p class="hidden md:block">Your collections</p>
+                        <p class="hidden md:block">Your Collections</p>
                     </a>
                 </div>
             </div>
         </div>
     </nav>
 
-    <!-- Main content section -->
-    <main class="w-full h-full flex flex-col justify-center">
-        <div id="content-section" class="w-full max-w-4xl mx-auto p-4 text-center mt-14">
-            <h1 class="text-2xl font-semibold text-primary mb-6">Welcome to Collective Hub!</h1>
-            <p class="text-gray-700">This is your feed where you can see all the items in your collection.</p>
+    <!-- Content section for profile -->
+    <main class="ml-[50px] md:ml-64 w-full flex flex-col justify-start items-center mt-10 p-4">
+        <h1 class="text-2xl font-bold text-primary mb-8">Your Collections</h1>
+        <div id="collections-container" class="grid gap-6 md:grid-cols-2 lg:grid-cols-3 w-full max-w-6xl">
+            <!-- Collection -->
+            <div class="bg-white rounded-lg shadow-md p-4">
+                <h2 class="text-xl font-semibold mb-2 text-primary">Comics</h2>
+                <p class="text-gray-700">Publisher: Marvel</p>
+                <p class="text-gray-700">Year: 1990</p>
+                <p class="text-gray-700">Condition: Near Mint</p>
+                <p class="text-gray-700">Value: $500</p>
+            </div>
+            <div class="bg-white rounded-lg shadow-md p-4">
+                <h2 class="text-xl font-semibold mb-2 text-primary">Magic: the gathering</h2>
+                <p class="text-gray-700">Publisher: Wizards of the coast</p>
+                <p class="text-gray-700">Year: 2018</p>
+                <p class="text-gray-700">Condition: Mint</p>
+                <p class="text-gray-700">Value: $100</p>
+            </div>
         </div>
     </main>
 </body>
