FIX: Nav bar wierd size
fixed and issue with the nav bar being to big

--- a/public/profile.html
+++ b/public/profile.html
@@ -10,7 +10,7 @@
 <body class="flex">
 
     <!-- Sidebar navigation -->
-    <nav class="bg-gray-800 w-[50px] md:w-64 min-h-screen fixed">
+    <nav class="bg-gray-800 w-[50px] md:w-64 min-h-screen">
         <div class="mx-auto max-w-full px-1 py-4">
             <div class="flex flex-col items-start space-y-6">
                 <!-- Logo -->
@@ -50,7 +50,7 @@
     </nav>
 
     <!-- Content section for profile -->
-    <main class="ml-[50px] md:ml-64 w-full flex flex-col justify-start items-center mt-10 p-4">
+    <main class="w-full flex flex-col justify-start items-center mt-10 p-4">
         <h1 class="text-2xl font-bold text-primary mb-8">Your Collections</h1>
         <div id="collections-container" class="grid gap-6 md:grid-cols-2 lg:grid-cols-3 w-full max-w-6xl">
             <!-- Collection -->
