--- a/public/profile.html
+++ b/public/profile.html
@@ -50,25 +50,24 @@
     </nav>
 
     <!-- Content section for profile -->
-    <main class="w-full flex flex-col justify-start items-center mt-10 p-4">
+    <main class="w-full flex flex-col justify-start items-start mt-10 p-4">
         <h1 class="text-2xl font-bold text-primary mb-8">Your Collections</h1>
-        <div id="collections-container" class="grid gap-6 md:grid-cols-2 lg:grid-cols-3 w-full max-w-6xl">
-            <!-- Collection -->
-            <div class="bg-white rounded-lg shadow-md p-4">
-                <h2 class="text-xl font-semibold mb-2 text-primary">Comics</h2>
+        <section class="flex flex-col gap-5 md:flex-row md:justify-start flex-wrap">
+            <details class="bg-white rounded-lg shadow-md p-2">
+                <summary class="text-l font-semibold mb-2 text-primary w-40 list-none">Comics</summary>
                 <p class="text-gray-700">Publisher: Marvel</p>
                 <p class="text-gray-700">Year: 1990</p>
                 <p class="text-gray-700">Condition: Near Mint</p>
                 <p class="text-gray-700">Value: $500</p>
-            </div>
-            <div class="bg-white rounded-lg shadow-md p-4">
-                <h2 class="text-xl font-semibold mb-2 text-primary">Magic: the gathering</h2>
+            </details>
+            <details class="bg-white rounded-lg shadow-md p-2">
+                <summary class="text-l font-semibold mb-2 text-primary w-40 list-none">Magic: the gathering</summary>
                 <p class="text-gray-700">Publisher: Wizards of the coast</p>
                 <p class="text-gray-700">Year: 2018</p>
                 <p class="text-gray-700">Condition: Mint</p>
                 <p class="text-gray-700">Value: $100</p>
-            </div>
-        </div>
+            </details>
+        </section>
     </main>
 </body>
 </html>
