--- a/public/profile.html
+++ b/public/profile.html
@@ -49,25 +49,57 @@
         </div>
     </nav>
 
-    <!-- Content section for profile -->
     <main class="w-full flex flex-col justify-start items-start mt-10 p-4">
         <h1 class="text-2xl font-bold text-primary mb-8">Your Collections</h1>
-        <section class="flex flex-col gap-5 md:flex-row md:justify-start flex-wrap">
-            <details class="bg-white rounded-lg shadow-md p-2">
-                <summary class="text-l font-semibold mb-2 text-primary w-40 list-none">Comics</summary>
-                <p class="text-gray-700">Publisher: Marvel</p>
-                <p class="text-gray-700">Year: 1990</p>
-                <p class="text-gray-700">Condition: Near Mint</p>
-                <p class="text-gray-700">Value: $500</p>
-            </details>
-            <details class="bg-white rounded-lg shadow-md p-2">
-                <summary class="text-l font-semibold mb-2 text-primary w-40 list-none">Magic: the gathering</summary>
-                <p class="text-gray-700">Publisher: Wizards of the coast</p>
-                <p class="text-gray-700">Year: 2018</p>
-                <p class="text-gray-700">Condition: Mint</p>
-                <p class="text-gray-700">Value: $100</p>
-            </details>
-        </section>
+        <div class="w-full max-w-lg mx-auto mt-5">
+            <div class="mb-4">
+                <button
+                    class="w-full flex justify-between items-center bg-white p-4 text-primary font-semibold rounded-lg shadow-md focus:outline-none"
+                    data-accordion-button
+                    data-target="content1"
+                >
+                    <span>Comics</span>
+                    <svg
+                        id="icon-content1"
+                        class="w-4 h-4 transform transition-transform duration-300"
+                        viewBox="0 0 20 20"
+                        fill="currentColor"
+                    >
+                        <path d="M5.23 7.21a.75.75 0 011.06 0L10 10.94l3.72-3.72a.75.75 0 011.06 1.06l-4.25 4.25a.75.75 0 01-1.06 0L5.23 8.27a.75.75 0 010-1.06z"/>
+                    </svg>
+                </button>
+                <div id="content1" class="hidden mt-2 p-4 bg-gray-100 rounded-md shadow-inner">
+                    <p class="text-gray-700">Publisher: Marvel</p>
+                    <p class="text-gray-700">Year: 1990</p>
+                    <p class="text-gray-700">Condition: Near Mint</p>
+                    <p class="text-gray-700">Value: $500</p>
+                </div>
+            </div>
+          
+            <div class="mb-4">
+                <button
+                    class="w-full flex justify-between items-center bg-white p-4 text-primary font-semibold rounded-lg shadow-md focus:outline-none"
+                    data-accordion-button
+                    data-target="content2"
+                >
+                    <span>Magic: the Gathering</span>
+                    <svg
+                        id="icon-content2"
+                        class="w-4 h-4 transform transition-transform duration-300"
+                        viewBox="0 0 20 20"
+                        fill="currentColor"
+                    >
+                        <path d="M5.23 7.21a.75.75 0 011.06 0L10 10.94l3.72-3.72a.75.75 0 011.06 1.06l-4.25 4.25a.75.75 0 01-1.06 0L5.23 8.27a.75.75 0 010-1.06z"/>
+                    </svg>
+                </button>
+                <div id="content2" class="hidden mt-2 p-4 bg-gray-100 rounded-md shadow-inner">
+                    <p class="text-gray-700">Publisher: Wizards of the Coast</p>
+                    <p class="text-gray-700">Year: 2018</p>
+                    <p class="text-gray-700">Condition: Mint</p>
+                    <p class="text-gray-700">Value: $100</p>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
