--- a/feed/index.html
+++ b/feed/index.html
@@ -24,7 +24,7 @@
 
                 <!--links -->
                 <div class="flex flex-col space-y-2 md:w-full mt-8">
-                    <a href="feed.html" class="rounded-md bg-gray-900 px-2 py-2 text-sm font-medium text-white flex items-center gap-5">
+                    <a href="/feed/index.html" class="rounded-md bg-gray-900 px-2 py-2 text-sm font-medium text-white flex items-center gap-5">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#edddd4" viewBox="0 0 256 256"><path d="M216,40H40A16,16,0,0,0,24,56V200a16,16,0,0,0,16,16H216a16,16,0,0,0,16-16V56A16,16,0,0,0,216,40Zm0,160H40V56H216V200ZM184,96a8,8,0,0,1-8,8H80a8,8,0,0,1,0-16h96A8,8,0,0,1,184,96Zm0,32a8,8,0,0,1-8,8H80a8,8,0,0,1,0-16h96A8,8,0,0,1,184,128Zm0,32a8,8,0,0,1-8,8H80a8,8,0,0,1,0-16h96A8,8,0,0,1,184,160Z"></path></svg>
                         <p class="hidden md:block">Feed</p>
                     </a>
