--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1 class="text-center text-2xl font-semibold mb-6 text-primary">Collective hub</h1>
       </span>
       <h2 class="text-center text-xl font-semibold mb-6 text-primary">Login</h2>
-      <form action="/feed/index.html" method="POST" class="space-y-4" >
+      <form action="/index.html" method="POST" class="space-y-4" >
         <div>
           <label for="email" class="block text-sm font-medium text-primary">Email</label>
           <input
