--- a/public/create.html
+++ b/public/create.html
@@ -25,11 +25,11 @@
 
                 <!--Links -->
                 <div class="flex flex-col space-y-2 md:w-full mt-8">
-                    <a href="/feed.html" class="rounded-md px-2 py-2 text-sm font-medium text-white sm:w-10 md:w-full text-left flex items-center gap-5">
+                    <a href="feed.html" class="rounded-md px-2 py-2 text-sm font-medium text-white sm:w-10 md:w-full text-left flex items-center gap-5">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#edddd4" viewBox="0 0 256 256"><path d="M216,40H40A16,16,0,0,0,24,56V200a16,16,0,0,0,16,16H216a16,16,0,0,0,16-16V56A16,16,0,0,0,216,40Zm0,160H40V56H216V200ZM184,96a8,8,0,0,1-8,8H80a8,8,0,0,1,0-16h96A8,8,0,0,1,184,96Zm0,32a8,8,0,0,1-8,8H80a8,8,0,0,1,0-16h96A8,8,0,0,1,184,128Zm0,32a8,8,0,0,1-8,8H80a8,8,0,0,1,0-16h96A8,8,0,0,1,184,160Z"></path></svg>
                         <p class="hidden md:block">Feed</p>
                     </a>
-                    <a href="/create.html" class="rounded-md bg-gray-900 px-2 py-2 text-sm font-medium text-white sm:w-10 md:w-full text-left flex items-center gap-5" aria-current="page">
+                    <a href="create.html" class="rounded-md bg-gray-900 px-2 py-2 text-sm font-medium text-white sm:w-10 md:w-full text-left flex items-center gap-5" aria-current="page">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#edddd4ff" viewBox="0 0 256 256">
                             <path d="M227.32,73.37,182.63,28.69a16,16,0,0,0-22.63,0L36.69,152A15.86,15.86,0,0,0,32,163.31V208a16,16,0,0,0,16,16H216a8,8,0,0,0,0-16H115.32l112-112A16,16,0,0,0,227.32,73.37ZM136,75.31,152.69,92,68,176.69,51.31,160ZM48,208V179.31L76.69,208Zm48-3.31L79.32,188,164,103.31,180.69,120Zm96-96L147.32,64l24-24L216,84.69Z"></path>
                         </svg>
