--- a/public/profile.html
+++ b/public/profile.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <script type="module" src="../public/js/main.js" defer></script>
+    <script type="module" src="/public/js/main.js" defer></script>
 </head>
 <body class="flex">
 
