--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Collective Hub | Login</title>
+    <link rel="stylesheet" href="/public/css/style.css">
     <script type="module" src="public/js/main.js" defer></script>
   <body class="flex justify-center items-center h-screen bg-gray-100">
     <section class="w-full max-w-md p-6 bg-white rounded-lg shadow-md">
