--- a/public/profile.html
+++ b/public/profile.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
     <link rel="stylesheet" href="./css/style.css">
-    <script type="module" src="/public/js/main.js" defer></script>
+    <script type="module" src="./js/main.js" defer></script>
 </head>
 <body class="flex">
 
@@ -21,7 +21,7 @@
                         <circle cx="25" cy="15" r="10" fill="#C44536" />
                         <circle cx="25" cy="35" r="10" fill="#EDDDD4" />
                     </svg>
-                    <span class="text-white ml-4 text-lg font-semibold hidden md:block">Collective Hub</span>
+                    <span class="text-white ml-4 text-lg font-semibold hidden md:block">Collective hub</span>
                 </div>
 
                 <!-- Links -->
@@ -42,7 +42,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#edddd4ff" viewBox="0 0 256 256">
                             <path d="M168,128a8,8,0,0,1-8,8H96a8,8,0,0,1,0-16h64A8,8,0,0,1,168,128Zm-8,24H96a8,8,0,0,0,0,16h64a8,8,0,0,0,0-16ZM216,40V200a32,32,0,0,1-32,32H72a32,32,0,0,1-32-32V40a8,8,0,0,1,8-8H72V24a8,8,0,0,1,16,0v8h32V24a8,8,0,0,1,16,0v8h32V24a8,8,0,0,1,16,0v8h24A8,8,0,0,1,216,40Zm-16,8H184v8a8,8,0,0,1-16,0V48H136v8a8,8,0,0,1-16,0V48H88v8a8,8,0,0,1-16,0V48H56V200a16,16,0,0,0,16,16H184a16,16,0,0,0,16-16Z"></path>
                         </svg>
-                        <p class="hidden md:block">Your Collections</p>
+                        <p class="hidden md:block">Your collections</p>
                     </a>
                 </div>
             </div>
