--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Collective Hub | Login</title>
-    <link rel="stylesheet" href="/public/css/style.css">
-    <script type="module" src="public/js/main.js" defer></script>
+    <link rel="stylesheet" href="src/css/style.css">
+    <script type="module" src="src/js/main.js" defer></script>
   <body class="flex justify-center items-center h-screen bg-gray-100">
     <section class="w-full max-w-md p-6 bg-white rounded-lg shadow-md">
       <span class="flex justify-center">
@@ -18,7 +18,7 @@
       <h1 class="text-center text-2xl font-semibold mb-6 text-primary">Collective hub</h1>
       </span>
       <h2 class="text-center text-xl font-semibold mb-6 text-primary">Login</h2>
-      <form action="feed.html" method="GET" class="space-y-4" >
+      <form action="src/feed.html" method="GET" class="space-y-4" >
         <div>
           <label for="email" class="block text-sm font-medium text-primary">Email</label>
           <input
