tweaked placement of login

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Collective Hub | Login</title>
     <link rel="stylesheet" href="src/css/style.css">
     <script type="module" src="src/js/main.js" defer></script>
-  <body class="flex justify-center items-center h-screen bg-gray-100">
+  <body class="flex justify-center mt-28 h-full bg-gray-100">
     <section class="w-full max-w-md p-6 bg-white rounded-lg shadow-md">
       <span class="flex justify-center">
         <svg width="40" height="40" viewBox="0 0 50 50" xmlns="http://www.w3.org/2000/svg" fill="none">
